N2_numerical/Binning_effects/binning/logfiles/N0_numerical_4183933_1.err
  File "Calc_binning.py", line 137
    start_time = time.time()
             ^
SyntaxError: invalid syntax
